--- a/index.html
+++ b/index.html
@@ -2,13 +2,110 @@
 <html lang=""en>
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Welcome to the Hermes Leadership forum 6th July 2020.">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hermes | Leadership Forum 6 July 2020</title>
-    <link rel="stylesheet" type="text/css" href="sass/css-1.css">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="sass/css.css">
 </head>
 <body>
 
+<div class="container">
+    <div class="flex header-wrapper">
+        <img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo">
+        <img src="images/head.png" class="header-head">
+    </div>
+
+    <div class="welcome-wrapper">
+        <div class="welcome-content-wrapper">
+            <img src="images/border-left.svg"class="border-left" alt="black left border">
+
+            <div class="welcome-content">
+                <h1>Les Matinales de l’actu sociale</h1>
+                <h2>Décryptage de l'actualité sociale et légale</h2>
+                <p>La crise du COVID a engendré incertitudes, complexité et changements profonds dans tous les domaines et notamment, dans les ressources humaines. 
+                <br>
+                Du 16 mars à fin avril, ce n’est pas moins de 60 nouveaux textes de lois qui ont été promulgués en France. A cela, s’ajoute la particularité de centaines de conventions collectives.
+                <br>
+                Face à cette situation, il est plus que jamais indispensable pour les services RH d’avoir la bonne information, expliquée intelligiblement.
+                <br>
+                Le service de veille légale d’ADP, leader de la gestion du capital humain, suit et analyse constamment les évolutions et décrets du gouvernement. Il interagit avec le ministère du travail et tous les autres organismes concernés pour obtenir toutes les précisions nécessaires.
+                <br>
+                Fort de cette expertise, nous vous proposons des rendez-vous mensuels online pour vous aider à décrypter l’actualité sociale et légale.
+                <br>
+                Découvrez l’intégralité du programme de nos évènements online.
+                </p>
+
+                <div class="flex columns-wrapper">
+                    <div class="la-grand">
+                        <img src="images/grand.jpg">
+
+                        <div class="content">
+                            <p><strong>Panorama des réformes sociales et légales</strong>
+                            <br>
+                            Complexité, changements profonds, incertitude, la crise sanitaire du COVID a engendré de nombreuses <strong>réformes réglementaires.</strong>
+                            <br>
+                            <strong>Etes-vous bien informé(e) pour répondre à l'ensemble de ces nouveaux défis?</strong>
+
+                            ADP vous invite à assister à sa <strong>Grande Matinale</strong> de l'actu sociale et légale. Un événement online, animé par nos experts du pôle veille légale, pour décrypter toutes les réformes qui impactent ou vont impacter la gestion de vos RH:
+                            </p>
+
+                            <ul>
+                                <li>Retour sur la 3ème Loi de finances rectificatives pour 2020 (aide exceptionnelle aux contrats d’apprentissage et aux contrats de professionnalisation, défiscalisation des heures supplémentaires et complémentaires)</li>
+                                <li>COVID-19 et impacts paie (l’activité partielle de longue durée, l’indemnisation de l’activité partielle, temps de travail et dérogations)</li>
+                                <li>Nouvelles aides à l’embauche des jeunes</li>
+                                <li>Projets en cours</li>
+                            </ul>
+
+                            <p>1h30 pour bénéficier d'informations claires et actualisées et poser vos questions.</p>
+                            <p>Inscrivez-vous dès maintenant à nos prochains rendez-vous. 3 dates au choix pour décrypter l’actualité sociale et légale: </p>
+                            <ul>
+                                <li>7 décembre, 10h-11h30</li>
+                                <li>8 décembre, 10h-11h30</li>
+                                <li>10 décembre, 10h-11h30</li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                    <div class="focus">
+                        <img src="images/focus.jpg">
+
+                        <div class="content">
+                            <p><strong>Examen détaillé d’une actu sociale</strong>
+                            <br>
+                            <strong>60 nouveaux textes de lois</strong> ont été promulgués en France entre le 16 mars et le 30 avril 2020. Complexité, changements profonds, incertitude, la crise sanitaire du COVID a engendré de nombreuses <strong>réformes réglementaires.</strong>
+                            <br>
+                            <strong>Etes-vous bien informé(e) pour répondre à l’ensemble de ces nouveaux défis? </strong>
+                            ADP vous invite à assister à son <strong>Focus Actu</strong> sociale et légale. Un événement online, animé par nos experts du pôle veille légale, pour détailler et expliquer un ou deux sujets d’actualité sociale et légale particulièrement complexe:</p>
+                            <ul>
+                                <li>Blablabla</li>
+                                <li>Blablabla</li>
+                            </ul>
+                            <p>30 min d’atelier pratique pour éclaircir un sujet phare avec l’aide notre expert.
+                            <br>
+                            Inscrivez-vous dès maintenant à nos prochains rendez-vous. 3 dates au choix pour décrypter un sujet d’actualité sociale et légale: 
+                            </p>
+                            <ul>
+                                <li>9 novembre, 10h-10h30</li>
+                                <li>10 novembre, 10h-10h30</li>
+                                <li>12 novembre, 10h-10h30</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <img src="images/border-right.svg" class="border-right" alt="black right border">
+        </div>
+    </div>
+</div>
+
+<footer>
+    <div class="adp-wrapper flex">
+        <img src="images/adp.svg" class="adp-logo">
+        <img src="images/shapes.svg" class="shapes">
+    </div>
+</footer>
 
 </body>
 </html>
