--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang=""en>
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="La crise du COVID a engendré incertitudes, complexité et changements profonds dans tous les domaines et notamment, dans les ressources humaines.
+    Du 16 mars à fin avril, ce n’est pas moins de 60 nouveaux textes de lois qui ont été promulgués en France. A cela, s’ajoute la particularité de centaines de conventions collectives.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#26328c">
+
+    
+    <title>LES MATINALES DE L’ACTU SOCIALE</title>
     <link rel="stylesheet" type="text/css" href="sass/css.css">
 </head>
 <body>
