--- a/focus.html
+++ b/focus.html
@@ -22,6 +22,7 @@
     <div class="container">
         <div class="flex header-wrapper">
             <a href="index.html"><img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
+            
             <div class="right flex">
                 <div class="btn-holder">
                     <a href="grand.html" class="header-btn">La Grande Matinale</a>
@@ -33,37 +34,44 @@
     </div>
 </header>
 
-<div class="lower-header">
-    <div class="container">
-       <a href=""> <p>Inscrivez-vous à notre prochain événement La Grande Matinale le 12, 13 ou 14 octobre ici</p></a>
-    </div>
-</div>
-
 <div class="container">
-    <div class="welcome-wrapper">
-        <div class="welcome-content-wrapper">
-            <img src="images/border-left.svg"class="border-left" alt="black left border">
+    <div class="la-grand">
+        <img src="images/focus.jpg">
 
-            <div class="welcome-content">
-                <h1>Les Matinales de l’actu sociale</h1>
-                <h2>Décryptage de l'actualité sociale et légale</h2>
-                <p>La crise du COVID a engendré incertitudes, complexité et changements profonds dans tous les domaines et notamment, dans les ressources humaines. 
+        <div class="content flex">
+            <div class="col-1">
+                <p>ADP vous invite à assister à son Focus Actu sociale et légale. 30 min d’atelier pratique pour éclaircir un sujet phare avec l’aide notre expert.
                 <br>
-                Du 16 mars à fin avril, ce n’est pas moins de 60 nouveaux textes de lois qui ont été promulgués en France. A cela, s’ajoute la particularité de centaines de conventions collectives.
-                <br>
-                Face à cette situation, il est plus que jamais indispensable pour les services RH d’avoir la bonne information, expliquée intelligiblement.
-                <br>
-                Le service de veille légale d’ADP, leader de la gestion du capital humain, suit et analyse constamment les évolutions et décrets du gouvernement. Il interagit avec le ministère du travail et tous les autres organismes concernés pour obtenir toutes les précisions nécessaires.
-                <br>
-                Fort de cette expertise, nous vous proposons des rendez-vous mensuels online pour vous aider à décrypter l’actualité sociale et légale.
-                <br>
-                Découvrez l’intégralité du programme de nos évènements online.
+                Dans les prochains jours nous communiquerons le grand sujet du mois de Novembre. Inscrivez-vous dès maintenant à nos prochains rendez-vous. 3 dates au choix pour décrypter un sujet d’actualité sociale et légale:
                 </p>
             </div>
 
-            <img src="images/border-right.svg" class="border-right" alt="black right border">
+            <div class="col-2 focus">
+                <p><strong>3 sessions disponibles en Novembre afn de revenir sur un sujet phare de l’actualité sociale et légale</strong></p>
+
+                <div class="dates-holder">
+
+                    <div class="december">
+                        <p>December</p>
+
+                        <div class="date">
+                            <p class="time">7/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
+                        </div>
+
+                        <div class="date">
+                            <p class="time">8/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
+                        </div>
+
+                        <div class="date">
+                            <p class="time">10/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
+                        </div>
+                    </div>
+                </div>
+                <p>Découvrez le replay et les prochaines date de La Grande Matinale</p>
+            </div>
         </div>
-    </div>
+
+        </div>
 </div>
 
 <footer>
