--- a/focus.html
+++ b/focus.html
@@ -14,70 +14,90 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css2.css">
+    <link rel="stylesheet" type="text/css" href="sass/css.css">
 </head>
 <body>
 
 <header>
     <div class="container">
         <div class="flex header-wrapper">
-            <a href="index.html"><img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
-            
+            <div class="header-imgs-wrapper">
+            <a href="index.html"><img src="images/adp.svg" class="adp-logo" alt="Les Matinales de l’Actu Sociale logo">
+            <img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
+        </div>
+
             <div class="right flex">
                 <div class="btn-holder">
                     <a href="grand.html" class="header-btn">La Grande Matinale</a>
                     <a href="focus.html" class="header-btn">Le Focus Actu</a>
                 </div>
-                <img src="images/head.png" class="header-head">
             </div>
         </div>
     </div>
 </header>
 
 <div class="container">
-    <div class="la-grand">
-        <img src="images/focus.jpg">
+    <div class="flex col-wrapper">
+        <div class="col-left">
+            <img src="images/focus.svg" class="grand-logo" alt="adp grand logo">
 
-        <div class="content flex">
-            <div class="col-1">
-                <p>ADP vous invite à assister à son Focus Actu sociale et légale. 30 min d’atelier pratique pour éclaircir un sujet phare avec l’aide notre expert.
-                <br>
-                Dans les prochains jours nous communiquerons le grand sujet du mois de Novembre. Inscrivez-vous dès maintenant à nos prochains rendez-vous. 3 dates au choix pour décrypter un sujet d’actualité sociale et légale:
-                </p>
-            </div>
+            <h1>DECHIFFRAGE DE L'ACTU SOCIALE</h1>
 
-            <div class="col-2 focus">
-                <p><strong>3 sessions disponibles en Novembre afn de revenir sur un sujet phare de l’actualité sociale et légale</strong></p>
+            <h2>60 nouveaux textes de lois ont été promulgués en France entre le 16 mars et le 30 avril 2020. Complexité, changements profonds, incertitude, la crise sanitaire du COVID a engendré de nombreuses réformes réglementaires.</h2>
+            <br>
+            <h3>Êtes-vous bien informé(e) pour répondre à l’ensemble de ces nouveaux défis?</h3>
 
-                <div class="dates-holder">
-
-                    <div class="december">
-                        <p>December</p>
-
-                        <div class="date">
-                            <p class="time">7/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
-                        </div>
-
-                        <div class="date">
-                            <p class="time">8/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
-                        </div>
-
-                        <div class="date">
-                            <p class="time">10/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
-                        </div>
-                    </div>
-                </div>
-                <p>Découvrez le replay et les prochaines date de La Grande Matinale</p>
-            </div>
+            <p>ADP vous invite à assister à son Focus Actu. Un événement online gratuit de 45 min, animé par nos experts du pôle veille légale, pour déchiffrer deux sujets phares de l’actualité sociale et légale.
+            <br>
+            <br>
+            <strong>AU PROGRAMME DE NOTRE ÉDITION DE NOVEMBRE:</strong></p>
+            <ul>
+                <li>1. L’activité partielle</li>
+                <li>2. Les différentes aides aux entreprises</li>
+            </ul>
         </div>
 
+        <div class="col-right">
+            <div class="col-right-content">
+                <img src="images/head.png" class="head-logo" alt="adp logo image of a man">
+                <h2>3 sessions disponibles en novembre afin de revenir sur deux sujets phares de l’actualité sociale et légale</h2>
+
+                <ul>
+                    <li>
+                        <p>10 novembre<br>
+                            10h - 10h 45
+                        </p>
+                    </li>
+                    <a href="">Je m’inscris</a>
+
+                    <li>
+                        <p>12 novembre<br>
+                            10h - 10h 45
+                        </p>
+                    </li>
+                    <a href="">Je m’inscris</a>
+
+                    <li>
+                        <p>13 novembre<br>
+                            10h - 10h 45 
+                        </p>
+                    </li>
+                    <a href="">Je m’inscris</a>
+                </ul>
+            </div>
         </div>
+    </div>
 </div>
 
 <footer>
-    <div class="adp-wrapper flex">
-        <img src="images/adp.png" class="adp-logo">
+    <div class="upper-footer container">
         <img src="images/shapes.svg" class="shapes">
+    </div>
+
+    <div class="lower-footer">
+        <div class="container">
+            <p>Contact the team: <a href="mailto:adp@firstevent.co.uk">adp@firstevent.co.uk</a></p>
+        </div>
     </div>
 </footer>
 
