--- a/grand.html
+++ b/grand.html
@@ -14,84 +14,92 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css2.css">
+    <link rel="stylesheet" type="text/css" href="sass/css.css">
 </head>
 <body>
 
 <header>
     <div class="container">
         <div class="flex header-wrapper">
-            <a href="index.html"><img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
+            <div class="header-imgs-wrapper">
+            <a href="index.html"><img src="images/adp.svg" class="adp-logo" alt="Les Matinales de l’Actu Sociale logo">
+            <img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
+        </div>
+
             <div class="right flex">
                 <div class="btn-holder">
                     <a href="grand.html" class="header-btn">La Grande Matinale</a>
                     <a href="focus.html" class="header-btn">Le Focus Actu</a>
                 </div>
-                <img src="images/head.png" class="header-head">
             </div>
         </div>
     </div>
 </header>
 
 <div class="container">
-    <div class="la-grand">
-        <img src="images/grand.jpg">
+    <div class="flex col-wrapper">
+        <div class="col-left">
+            <img src="images/grand.svg" class="grand-logo" alt="adp grand logo">
 
-        <div class="content flex">
-            <div class="col-1">
-                <p><strong>Etes-vous bien informé(e) pour répondre à l'ensemble de ces nouveaux défis?</strong>
-                <br>
-                ADP vous invite à assister à sa Grande Matinale de l'actu sociale et légale. Un événement online, animé par nos experts du pôle veille légale, pour décrypter toutes les réformes qui impactent ou vont impacter la gestion de vos RH. 
-                <br>
-                <strong>1h30 pour décrypter les dernières actualités sociales.</strong>
-                <br>
-                En octobre, nous  revenons sur :
-                </p>
+            <h1>PANORAMA DES RÉFORMES SOCIALES ET LÉGALES</h1>
+
+            <h2>Complexité, changements profonds, incertitude, la crise sanitaire du COVID a engendré de nombreuses réformes réglementaires.</h2>
+            <br>
+            <h3>Êtes-vous bien informé(e) pour répondre à l’ensemble de ces nouveaux défis?</h3>
+
+            <p>ADP vous invite à assister à sa Grande Matinale de l'actu sociale et légale. Un événement online gratuit d'1h30, animé par nos experts du pôle veille légale, pour faire le tour de toutes les réformes qui impactent ou vont impacter la gestion de vos RH.
+            <br>
+            <br>
+            <strong>AU PROGRAMME DE NOTRE PROCHAINE ÉDITION
+            DE DÉCEMBRE:</strong>
+            <br>
+            En construction… nous travaillons à vous fournir un
+            contenu au plus près de l’actualité</p>
+        </div>
+
+        <div class="col-right">
+            <div class="col-right-content">
+                <img src="images/head.png" class="head-logo" alt="adp logo image of a man">
+                <h2>3 sessions disponibles en décembre pour faire le tour de l’actualité sociale</h2>
 
                 <ul>
-                    <li>La 3ème Loi de Finances Rectificatives de 2020</li>
-                    <li>Le Covid-19 et les impacts en paie</li>
-                    <li>Les nouvelles aides à l’embauche des jeunes</li>
-                    <li>Les autres projets en cours</li>
+                    <li>
+                        <p>8 décembre<br>
+                            10h - 11h 30
+                        </p>
+                    </li>
+                    <a href="">Je m’inscris</a>
+
+                    <li>
+                        <p>10 décembre <br>
+                            10h - 11h 30
+                        </p>
+                    </li>
+                    <a href="">Je m’inscris</a>
+
+                    <li>
+                        <p>11 décembre <br>
+                            10h - 11h 30  
+                        </p>
+                    </li>
+                    <a href="">Je m’inscris</a>
                 </ul>
             </div>
-
-            <div class="col-2">
-                <p><strong>3 sessions disponibles en Octobre et en Décembre pour un décryptage en profondeur de l’actualité sociale</strong></p>
-
-                <div class="dates-holder">
-                    <div class="october">
-                        <p>Octobre</p>
-                        <p class="btn">Je regarde le replay</p>
-                    </div>
-
-                    <div class="december">
-                        <p>December</p>
-
-                        <div class="date">
-                            <p class="time">7/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
-                        </div>
-
-                        <div class="date">
-                            <p class="time">8/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
-                        </div>
-
-                        <div class="date">
-                            <p class="time">10/12 à 10h</p> <a href="" class="register">Je m’inscris</a>
-                        </div>
-                    </div>
-                </div>
-                <p>Découvrez le sujet de notre Focus Actu de Novembre</p>
-            </div>
         </div>
-
-        </div>
+    </div>
+    <h3>En attendant la prochaine Grande Matinale, regardez ICI le replay 
+de notre édition d’octobre. </h3>
 </div>
 
 <footer>
-    <div class="adp-wrapper flex">
-        <img src="images/adp.png" class="adp-logo">
+    <div class="upper-footer container">
         <img src="images/shapes.svg" class="shapes">
+    </div>
+
+    <div class="lower-footer">
+        <div class="container">
+            <p>Contact the team: <a href="mailto:adp@firstevent.co.uk">adp@firstevent.co.uk</a></p>
+        </div>
     </div>
 </footer>
 
