--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css2.css">
+    <link rel="stylesheet" type="text/css" href="sass/css.css">
 </head>
 <body>
 
 <header>
     <div class="container">
         <div class="flex header-wrapper">
-            <a href="index.html"><img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
+            <div class="header-imgs-wrapper">
+            <a href="index.html"><img src="images/adp.svg" class="adp-logo" alt="Les Matinales de l’Actu Sociale logo">
+            <img src="images/logo.svg" class="logo" alt="Les Matinales de l’Actu Sociale logo"></a>
+        </div>
+
             <div class="right flex">
                 <div class="btn-holder">
                     <a href="grand.html" class="header-btn">La Grande Matinale</a>
                     <a href="focus.html" class="header-btn">Le Focus Actu</a>
                 </div>
-                <img src="images/head.png" class="header-head">
             </div>
         </div>
     </div>
@@ -35,28 +38,33 @@
 
 <div class="lower-header">
     <div class="container">
-       <a href=""> <p>Inscrivez-vous à notre prochain événement La Grande Matinale le 12, 13 ou 14 octobre ici</p></a>
+       <p>Inscrivez-vous à notre prochain événement La Grande Matinale le 12, 13 ou 14 octobre ici</p>
     </div>
 </div>
 
 <div class="container">
+
+    <div class="flex">
+        <img src="images/sociale.svg" class="sociale-logo" alt="les matinales sociales logo">
+        <img src="images/head.png" class="head-logo" alt="adp logo image of a man">
+    </div>
+
     <div class="welcome-wrapper">
         <div class="welcome-content-wrapper">
             <img src="images/border-left.svg"class="border-left" alt="black left border">
 
             <div class="welcome-content">
-                <h1>Les Matinales de l’actu sociale</h1>
                 <h2>Décryptage de l'actualité sociale et légale</h2>
                 <p>La crise du COVID a engendré incertitudes, complexité et changements profonds dans tous les domaines et notamment, dans les ressources humaines. 
-                <br>
+                <br><br>
                 Du 16 mars à fin avril, ce n’est pas moins de 60 nouveaux textes de lois qui ont été promulgués en France. A cela, s’ajoute la particularité de centaines de conventions collectives.
-                <br>
+                <br><br>
                 Face à cette situation, il est plus que jamais indispensable pour les services RH d’avoir la bonne information, expliquée intelligiblement.
-                <br>
+                <br><br>
                 Le service de veille légale d’ADP, leader de la gestion du capital humain, suit et analyse constamment les évolutions et décrets du gouvernement. Il interagit avec le ministère du travail et tous les autres organismes concernés pour obtenir toutes les précisions nécessaires.
-                <br>
+                <br><br>
                 Fort de cette expertise, nous vous proposons des rendez-vous mensuels online pour vous aider à décrypter l’actualité sociale et légale.
-                <br>
+                <br><br>
                 Découvrez l’intégralité du programme de nos évènements online.
                 </p>
             </div>
@@ -64,12 +72,22 @@
             <img src="images/border-right.svg" class="border-right" alt="black right border">
         </div>
     </div>
+
+    <div class="btns-wrapper">
+        <a href="" class="btns">La Grande Matinale</a>
+        <a href="" class="btns">Le Focus Actu</a>
+    </div>
 </div>
 
 <footer>
-    <div class="adp-wrapper flex">
-        <img src="images/adp.png" class="adp-logo">
+    <div class="upper-footer container">
         <img src="images/shapes.svg" class="shapes">
+    </div>
+
+    <div class="lower-footer">
+        <div class="container">
+            <p>Contact the team: <a href="mailto:adp@firstevent.co.uk">adp@firstevent.co.uk</a></p>
+        </div>
     </div>
 </footer>
 
