add anchor tags.

--- a/focus.html
+++ b/focus.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css.css">
+    <link rel="stylesheet" type="text/css" href="sass/css.css?v=1">
 </head>
 <body>
 
