--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css.css">
+    <link rel="stylesheet" type="text/css" href="sass/css.css?v=1">
 </head>
 <body>
 
@@ -74,8 +74,8 @@
     </div>
 
     <div class="btns-wrapper">
-        <a href="" class="btns">La Grande Matinale</a>
-        <a href="" class="btns">Le Focus Actu</a>
+        <a href="grand.html" class="btns">La Grande Matinale</a>
+        <a href="focus.html" class="btns">Le Focus Actu</a>
     </div>
 </div>
 
