amend email address

--- a/grand.html
+++ b/grand.html
@@ -98,7 +98,7 @@ de notre édition d’octobre. </h3>
 
     <div class="lower-footer">
         <div class="container">
-            <p>Contact the team: <a href="mailto:adp@firstevent.co.uk">adp@firstevent.co.uk</a></p>
+            <p>Contact the team: <a href="mailto:adp@firstevent.com">adp@firstevent.com</a></p>
         </div>
     </div>
 </footer>
