--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="lower-header">
     <div class="container">
-       <p>Inscrivez-vous à notre prochain événement La Grande Matinale le 12, 13 ou 14 octobre ici</p>
+       <p>Inscrivez-vous à notre prochain événement La Grande Matinale le 12, 13 ou 14 novembre ici</p>
     </div>
 </div>
 
@@ -86,7 +86,7 @@
 
     <div class="lower-footer">
         <div class="container">
-            <p>Contact the team: <a href="mailto:adp@firstevent.co.uk">adp@firstevent.co.uk</a></p>
+            <p>Contact the team: <a href="mailto:adp@firstevent.com">adp@firstevent.com</a></p>
         </div>
     </div>
 </footer>
