--- a/focus.html
+++ b/focus.html
@@ -96,7 +96,7 @@
 
     <div class="lower-footer">
         <div class="container">
-            <p>Contact the team: <a href="mailto:adp@firstevent.co.uk">adp@firstevent.co.uk</a></p>
+            <p>Contact the team: <a href="mailto:adp@firstevent.com">adp@firstevent.com</a></p>
         </div>
     </div>
 </footer>
