--- a/focus.html
+++ b/focus.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css.css?v=1">
+    <link rel="stylesheet" type="text/css" href="sass/css.css?v=2">
 </head>
 <body>
 
@@ -68,21 +68,21 @@
                             10h - 10h 45
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2777362/F795EA9C3ECD27922A42F2EB8C219FEB?partnerref=ADP-Website" target="_blank">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2777362/F795EA9C3ECD27922A42F2EB8C219FEB?partnerref=Matinales-Website" target="_blank">Je m’inscris</a>
 
                     <li>
                         <p>12 novembre<br>
                             10h - 10h 45
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2802741/B194C8559915A0997DCA6C44D38ADF68?partnerref=ADP-Website" target="_blank">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2802741/B194C8559915A0997DCA6C44D38ADF68?partnerref=Matinales-Website" target="_blank">Je m’inscris</a>
 
                     <li>
                         <p>13 novembre<br>
                             10h - 10h 45 
                         </p>
                     </li>
-                    <a href="https://event.on24.com/wcc/r/2802742/B6DF6330F16B701BA974230FF8BB3A41?partnerref=ADP-Website" target="_blank">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2802742/B6DF6330F16B701BA974230FF8BB3A41?partnerref=Matinales-Website" target="_blank">Je m’inscris</a>
                 </ul>
             </div>
         </div>
