--- a/grand.html
+++ b/grand.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css.css?v=1">
+    <link rel="stylesheet" type="text/css" href="sass/css.css?v=2">
 </head>
 <body>
 
@@ -87,8 +87,7 @@
             </div>
         </div>
     </div>
-    <h3>En attendant la prochaine Grande Matinale, regardez ICI le replay 
-de notre édition d’octobre. </h3>
+    <h3><a href="https://event.on24.com/wcc/r/2663742/F252FB1927F23155F3EC2204ABA1570D?partnerref=Matinales-Website" class="replay">En attendant la prochaine Grande Matinale, regardez ICI le replay de notre édition d’octobre.</a> </h3>
 </div>
 
 <footer>
