--- a/grand.html
+++ b/grand.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#26328c">
 
     <title>LES MATINALES DE L’ACTU SOCIALE</title>
-    <link rel="stylesheet" type="text/css" href="sass/css.css?v=2">
+    <link rel="stylesheet" type="text/css" href="sass/css.css?v=3">
 </head>
 <body>
 
@@ -52,9 +52,18 @@
             <br>
             <strong>AU PROGRAMME DE NOTRE PROCHAINE ÉDITION
             DE DÉCEMBRE:</strong>
-            <br>
-            En construction… nous travaillons à vous fournir un
-            contenu au plus près de l’actualité</p>
+            </p>
+            <ul>
+                <li>
+                    <p>Etat d’urgence sanitaire : impacts paie (formation, télétravail, test antigéniques, activité partielle…)</p>
+                </li>
+                <li>
+                    <p>Les projets de Loi de finances et de financement de la Sécurité sociale pour 2021</p>
+                </li>
+                <li>
+                    <p>Projets en cours</p>
+                </li>
+            </ul>
         </div>
 
         <div class="col-right">
@@ -68,21 +77,21 @@
                             10h - 11h 30
                         </p>
                     </li>
-                    <a href="">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2836237/0685ADDF819F9070BAEB02B88F53C993?partnerref=Matinale-Website" target="_blank">Je m’inscris</a>
 
                     <li>
                         <p>10 décembre <br>
                             10h - 11h 30
                         </p>
                     </li>
-                    <a href="">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2847188/6A6B6B2C51994A97950A7FBC4F0F0F7A?partnerref=Matinale-Website" target="_blank">Je m’inscris</a>
 
                     <li>
                         <p>11 décembre <br>
                             10h - 11h 30  
                         </p>
                     </li>
-                    <a href="">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2847190/45396BFEDE0C6F10B420B914BBC5C607?partnerref=Matinale-Website" target="_blank">Je m’inscris</a>
                 </ul>
             </div>
         </div>
