amend copy and add links

--- a/focus.html
+++ b/focus.html
@@ -47,19 +47,17 @@
             <br>
             <h3>Êtes-vous bien informé(e) pour répondre à l’ensemble de ces nouveaux défis?</h3>
 
-            <p>ADP vous invite à assister à son Focus Actu. Un événement online gratuit de 45 min, animé par nos experts du pôle veille légale, pour déchiffrer deux sujets phares de l’actualité sociale et légale.
+            <p>ADP vous invite à assister à son Focus Actu. Un événement online gratuit de 45 min, animé par nos experts du pôle veille légale, pour déchiffrer un sujet phare de l’actualité sociale et légale.
             <br>
             <br>
-            <strong>AU PROGRAMME DE NOTRE ÉDITION DE JANVIER:</strong></p>
-            <p>En construction. Nous travaillons sur un programme au plus proche de l’actualité.</p>
+            <strong>AU PROGRAMME DE NOTRE ÉDITION DE JANVIER :</strong></p>
+            <p>Les dernières évolutions concernant l’activité partielle</p>
         </div>
 
         <div class="col-right">
             <div class="col-right-content">
                 <img src="images/head.png" class="head-logo" alt="adp logo image of a man">
-                <h2>3 sessions disponibles en janvier afin de revenir sur deux sujets phares de l’actualité sociale et légale</h2>
-
-                <h3>Inscriptions ouvertes prochainement</h3>
+                <h2>3 sessions disponibles en janvier afin de revenir sur un sujet phare de l’actualité sociale et légale</h2>
 
                 <ul>
                     <li>
@@ -67,21 +65,21 @@
                             10h - 11h
                         </p>
                     </li>
-                    <a href="">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2941533/16D0AA22EC9B846E5A99AC3DD87B63FD?partnerref=Matinale-website">Je m’inscris</a>
 
                     <li>
                         <p>21 janvier<br>
                             10h - 11h
                         </p>
                     </li>
-                    <a href="">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2941535/AADFCD47BB19EAB02A55D291B0B64125?partnerref=Matinale-website">Je m’inscris</a>
 
                     <li>
                         <p>22 janvier<br>
                             10h - 11h 
                         </p>
                     </li>
-                    <a href="">Je m’inscris</a>
+                    <a href="https://event.on24.com/wcc/r/2941539/41FC292CBF67320273AEF93C7BFFD0FE?partnerref=Matinale-website">Je m’inscris</a>
                 </ul>
             </div>
         </div>
